Bug 206636 - Throbbing default buttons, r=josh r=Enn sr=roc